links to new page

--- a/index.html
+++ b/index.html
@@ -298,9 +298,10 @@
         <div class="container nav-container">
             <a href="index.html" class="logo font-script">CreativeLab // HEL</a>
             <ul class="nav-links">
-                <li><a href="index.html#courses">Production</a></li>
-                <li><a href="index.html#team">Crew</a></li>
-                <li><a href="films.html">Screenings</a></li>
+                <li><a href="https://creativelab-helsinki.one/#courses">Production</a></li>
+                <li><a href="https://creativelab-helsinki.one/#team">Crew</a></li>
+                <li><a href="#films">Films</a></li>
+                <li><a href="#screenplay-readings">Screenings</a></li>
                 <li><a href="#footer">Contact</a></li>
             </ul>
             <a href="index.html" class="cta-button">← Back to Home</a>
