--- a/index.html
+++ b/index.html
@@ -465,9 +465,9 @@
                 <div class="footer-section">
                     <h3>Quick Links</h3>
                     <a href="index.html">Home</a>
-                    <a href="index.html#courses">Courses</a>
-                    <a href="index.html#team">Our Team</a>
-                    <a href="films.html">Films & Screenings</a>
+                    <a href="https://creativelab-helsinki.one/#courses">Courses</a>
+                    <a href="https://creativelab-helsinki.one/#team">Our Team</a>
+                    <a href="index.html#films">Films & Screenings</a>
                     <a href="https://forms.office.com/r/tPir93Pp9C" target="_blank">Apply Now</a>
                 </div>
                 
