--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                     <a href="index.html">Home</a>
                     <a href="https://creativelab-helsinki.one/#courses">Courses</a>
                     <a href="https://creativelab-helsinki.one/#team">Our Team</a>
-                    <a href="index.html#films">Films & Screenings</a>
+                    <a href="index.html">Films & Screenings</a>
                     <a href="https://forms.office.com/r/tPir93Pp9C" target="_blank">Apply Now</a>
                 </div>
                 
