--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
             </div>
 
             <div style="text-align: center; margin-top: 50px;">
-                <a href="index.html#courses" class="cta-button" style="padding: 1rem 2rem;">Join Our Screenwriting Course</a>
+                <a href="https://forms.office.com/r/tPir93Pp9C" class="cta-button" style="padding: 1rem 2rem;">Join Our Screenwriting Course</a>
             </div>
         </div>
     </section>
