will you follow me

--- a/index.html
+++ b/index.html
@@ -586,6 +586,7 @@
                 <p><strong>Written by:</strong> Luka Ivanov, Olya Rozhnova, Mikhail Vaulin, Sofia Padyukova, Matvey Paasonen, Daniil Danyushevsky</p>
                 <p>An invitation becomes a journey — a collaborative piece about trust, companionship, and taking leaps of faith together.</p>
                 <p class="screenplay-meta">Live Reading · 2025 · Performed by Artem Stefanenko, Anton Lebedev, Darya Stukalina, Vladislav Gomankov</p>
+                <a href="https://www.canva.com/design/DAG7-07SWdg/VnOXy7k0WU7mT_iXjM1mNA/watch?utm_content=DAG7-07SWdg&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hde6ce04091" style="color: var(--action-red); text-decoration: none; font-weight: bold; display: inline-block; margin-top: 15px;">[ WATCH READING ]</a>
             </div>
 
             <div class="screenplay-card">
