will you follow me

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
             </div>
 
             <div class="screenplay-card">
-                <h3 class="font-script screenplay-title">Film History (Киноистория)</h3>
+                <h3 class="font-script screenplay-title">Film story (Киноистория)</h3>
                 <p><strong>Written by:</strong> Vladislav Raik, Lev Degotinsky, Anna Serdyuk, Elizaveta Kirillopskaya, Matvey Durnenkov</p>
                 <p>A meta-narrative exploring cinema itself — how films shape us, preserve memories, and connect generations through shared stories.</p>
                 <p class="screenplay-meta">Live Reading · 2025 · Performed by Lev Degotinsky, Matvey Durnenkov, Vladislav Raik, Daniil Danyushevsky, Anna Serdyuk, San Kostina</p>
@@ -579,6 +579,7 @@
                 <p><strong>Written by:</strong> Evgeny Rozhnov</p>
                 <p>A powerful solo performance examining the creative process, sacrifice, and the price of artistic vision.</p>
                 <p class="screenplay-meta">Live Reading · 2025 · Read by Mikhail Durnenkov</p>
+                <a href="https://www.canva.com/design/DAG7-4l7sxs/vvwPsnyqu3DUjNi9nNgkBg/watch?utm_content=DAG7-4l7sxs&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h5497687e60" style="color: var(--action-red); text-decoration: none; font-weight: bold; display: inline-block; margin-top: 15px;">[ WATCH READING ]</a>
             </div>
 
             <div class="screenplay-card">
