will you follow me

--- a/index.html
+++ b/index.html
@@ -572,6 +572,7 @@
                 <p><strong>Written by:</strong> Vladislav Raik, Lev Degotinsky, Anna Serdyuk, Elizaveta Kirillopskaya, Matvey Durnenkov</p>
                 <p>A meta-narrative exploring cinema itself — how films shape us, preserve memories, and connect generations through shared stories.</p>
                 <p class="screenplay-meta">Live Reading · 2025 · Performed by Lev Degotinsky, Matvey Durnenkov, Vladislav Raik, Daniil Danyushevsky, Anna Serdyuk, San Kostina</p>
+                <a href="https://www.canva.com/design/DAG7-yraTXU/0m4WwLP3Aol80kZinti0yw/watch?utm_content=DAG7-yraTXU&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h080ba4a5ae" style="color: var(--action-red); text-decoration: none; font-weight: bold; display: inline-block; margin-top: 15px;">[ WATCH READING ]</a>
             </div>
 
             <div class="screenplay-card">
