--- a/index.html
+++ b/index.html
@@ -474,8 +474,8 @@
         <div class="container nav-container">
             <a href="index.html" class="logo font-script">CreativeLab // HEL</a>
             <ul class="nav-links">
-                <li><a href="index.html#courses">Production</a></li>
-                <li><a href="index.html#team">Crew</a></li>
+                <li><a href="https://creativelab-helsinki.one/#courses">Production</a></li>
+                <li><a href="https://creativelab-helsinki.one/#team">Crew</a></li>
                 <li><a href="#screenplay-readings">Screenings</a></li>
                 <li><a href="#contacts">Contact</a></li>
             </ul>
@@ -497,8 +497,8 @@
             <button class="close-menu" id="closeMenu" aria-label="Close Menu">&times;</button>
         </div>
         <ul class="mobile-nav-links">
-            <li><a href="index.html#courses" class="mobile-link">Production</a></li>
-            <li><a href="index.html#team" class="mobile-link">Crew</a></li>
+            <li><a href="https://creativelab-helsinki.one/#courses" class="mobile-link">Production</a></li>
+            <li><a href="https://creativelab-helsinki.one/#team" class="mobile-link">Crew</a></li>
             <li><a href="#screenplay-readings" class="mobile-link">Screenings</a></li>
             <li><a href="#contacts" class="mobile-link">Contact</a></li>
             <li><a href="index.html" class="mobile-cta">← Back to Home</a></li>
@@ -551,9 +551,7 @@
                 </article>
 
                 <article class="film-card">
-                    <div style="width: 100%; aspect-ratio: 16/9; background: linear-gradient(45deg, #222, #333); display: flex; align-items: center; justify-content: center; position: relative;">
-                        <span style="font-size: 2rem; color: rgba(255,255,255,0.2);">▶</span>
-                    </div>
+                    <img src="src/Snap.png" alt="The Next Station" class="film-poster">
                     <div class="film-content">
                         <h3 class="font-script film-title">Snap to Memories</h3>
                         <p>A race against time that produced a haunting meditation on how we preserve and lose our past.</p>
@@ -697,8 +695,8 @@
                 <div class="footer-section">
                     <h3>Quick Links</h3>
                     <a href="index.html">Home</a>
-                    <a href="index.html#courses">Courses</a>
-                    <a href="index.html#team">Our Team</a>
+                    <a href="https://creativelab-helsinki.one/#courses">Courses</a>
+                    <a href="https://creativelab-helsinki.one/#team">Our Team</a>
                     <a href="films.html">Films & Screenings</a>
                     <a href="https://forms.office.com/r/tPir93Pp9C" target="_blank">Apply Now</a>
                 </div>
