--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                     <p>A meta-narrative exploring cinema itself — how films shape us, preserve memories, and connect generations through shared stories.</p>
                     <p class="screenplay-meta">Written by: Vladislav Raik, Lev Degotinsky, Anna Serdyuk, Elizaveta Kirillopskaya, Matvey Durnenkov<br>
                     Performed by: Lev Degotinsky, Matvey Durnenkov, Vladislav Raik, Daniil Danyushevsky, Anna Serdyuk, San Kostina</p>
-                    <a href="https://www.canva.com/design/DAG7-yraTXU/0m4WwLP3Aol80kZinti0yw/watch" class="screenplay-watch-link">[ WATCH READING ]</a>
+                    <a href="https://www.canva.com/design/DAG7-yraTXU/0m4WwLP3Aol80kZinti0yw/watch?utm_content=DAG7-yraTXU&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h080ba4a5ae" class="screenplay-watch-link">[ WATCH READING ]</a>
                 </div>
 
                 <div class="screenplay-card">
@@ -648,7 +648,7 @@
                     <p>A powerful solo performance examining the creative process, sacrifice, and the price of artistic vision.</p>
                     <p class="screenplay-meta">Written by: Evgeny Rozhnov<br>
                     Read by: Mikhail Durnenkov</p>
-                    <a href="https://www.canva.com/design/DAG7-4l7sxs/vvwPsnyqu3DUjNi9nNgkBg/watch" class="screenplay-watch-link">[ WATCH READING ]</a>
+                    <a href="https://www.canva.com/design/DAG7-4l7sxs/vvwPsnyqu3DUjNi9nNgkBg/watch?utm_content=DAG7-4l7sxs&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h5497687e60" class="screenplay-watch-link">[ WATCH READING ]</a>
                 </div>
 
                 <div class="screenplay-card">
@@ -657,7 +657,7 @@
                     <p>An invitation becomes a journey — a collaborative piece about trust, companionship, and taking leaps of faith together.</p>
                     <p class="screenplay-meta">Written by: Luka Ivanov, Olya Rozhkova, Mikhail Vaulin, Sofia Padyukova, Matvey Paasonen, Daniil Danyushevsky<br>
                     Performed by: Artem Stefanenko, Anton Lebedev, Darya Stukalina, Vladislav Gomankov</p>
-                    <a href="https://www.canva.com/design/DAG7-07SWdg/VnOXy7k0WU7mT_iXjM1mNA/watch" class="screenplay-watch-link">[ WATCH READING ]</a>
+                    <a href="https://www.canva.com/design/DAG7-07SWdg/VnOXy7k0WU7mT_iXjM1mNA/watch?utm_content=DAG7-07SWdg&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hde6ce04091" class="screenplay-watch-link">[ WATCH READING ]</a>
                 </div>
 
                 <div class="screenplay-card">
