--- a/index.html
+++ b/index.html
@@ -635,11 +635,11 @@
             <div class="screenplay-grid">
                 <div class="screenplay-card">
                     <span class="scene-label">SCENE 07: META-CINEMA</span>
-                    <h3 class="screenplay-title">Film History (Киноистория)</h3>
+                    <h3 class="screenplay-title">A Film Story (Киноистория)</h3>
                     <p>A meta-narrative exploring cinema itself — how films shape us, preserve memories, and connect generations through shared stories.</p>
                     <p class="screenplay-meta">Written by: Vladislav Raik, Lev Degotinsky, Anna Serdyuk, Elizaveta Kirillopskaya, Matvey Durnenkov<br>
                     Performed by: Lev Degotinsky, Matvey Durnenkov, Vladislav Raik, Daniil Danyushevsky, Anna Serdyuk, San Kostina</p>
-                    <a href="https://www.canva.com/design/DAG7-yraTXU/0m4WwLP3Aol80kZinti0yw/watch?utm_content=DAG7-yraTXU&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h080ba4a5ae" class="screenplay-watch-link">[ WATCH READING ]</a>
+                    <a href="https://www.canva.com/design/DAG7_Ynt7NA/IIhhVuyvYe_YO_xjr3E8Ng/watch?utm_content=DAG7_Ynt7NA&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h4a8f500cc1" class="screenplay-watch-link">[ WATCH READING ]</a>
                 </div>
 
                 <div class="screenplay-card">
