--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                     <span class="scene-label">SCENE 01: DREAMS</span>
                     <h3 class="screenplay-title">Wings (Крылья)</h3>
                     <p>A poetic exploration of dreams, freedom, and the courage to spread your wings beyond familiar horizons.</p>
-                    <p class="screenplay-meta">Written by: Olya Rozhkova, Varvara Shaliguzova, Arina Rabikova, Sofia Padyukova<br>
+                    <p class="screenplay-meta">Written by: Olya Rozhnova, Varvara Shaliguzova, Arina Rabikova, Sofia Padyukova<br>
                     Performed by: Evgeniya Prokina, Elizaveta Kirillopskaya, Arina Rabikova, Sofia Padyukova</p>
                 </div>
 
@@ -598,7 +598,7 @@
                     <span class="scene-label">SCENE 03: NEW BEGINNINGS</span>
                     <h3 class="screenplay-title">New Life (Новая Жизнь)</h3>
                     <p>A transformative journey of self-discovery when circumstances force us to rebuild our lives from scratch.</p>
-                    <p class="screenplay-meta">Written by: Nataliya Rozhkova, Anastasia Chala<br>
+                    <p class="screenplay-meta">Written by: Nataliya Rozhnova, Anastasia Chala<br>
                     Performed by: Anastasia Chala, Ekaterina Voronina, Mikhail Durnenkov, Daniil Danyushevsky</p>
                 </div>
 
@@ -655,7 +655,7 @@
                     <span class="scene-label">SCENE 09: JOURNEY</span>
                     <h3 class="screenplay-title">Will You Come With Me? (Ты Пойдешь Со Мной?)</h3>
                     <p>An invitation becomes a journey — a collaborative piece about trust, companionship, and taking leaps of faith together.</p>
-                    <p class="screenplay-meta">Written by: Luka Ivanov, Olya Rozhkova, Mikhail Vaulin, Sofia Padyukova, Matvey Paasonen, Daniil Danyushevsky<br>
+                    <p class="screenplay-meta">Written by: Luka Ivanov, Olya Rozhnova, Mikhail Vaulin, Sofia Padyukova, Matvey Paasonen, Daniil Danyushevsky<br>
                     Performed by: Artem Stefanenko, Anton Lebedev, Darya Stukalina, Vladislav Gomankov</p>
                     <a href="https://www.canva.com/design/DAG7-07SWdg/VnOXy7k0WU7mT_iXjM1mNA/watch?utm_content=DAG7-07SWdg&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hde6ce04091" class="screenplay-watch-link">[ WATCH READING ]</a>
                 </div>
