--- a/index.html
+++ b/index.html
@@ -580,8 +580,8 @@
             <div class="screenplay-grid">
                 <div class="screenplay-card">
                     <span class="scene-label">SCENE 01: DREAMS</span>
-                    <h3 class="screenplay-title">Wings (Крылья)</h3>
-                    <p>A poetic exploration of dreams, freedom, and the courage to spread your wings beyond familiar horizons.</p>
+                    <h3 class="screenplay-title">Roof (Крыша)</h3>
+                    <p>A poetic exploration of dreams, freedom, and the courage to spread your roof.</p>
                     <p class="screenplay-meta">Written by: Olya Rozhnova, Varvara Shaliguzova, Arina Rabikova, Sofia Padyukova<br>
                     Performed by: Evgeniya Prokina, Elizaveta Kirillopskaya, Arina Rabikova, Sofia Padyukova</p>
                 </div>
