--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 
     <nav>
         <div class="container nav-container">
-            <a href="index.html" class="logo font-script">CreativeLab // HEL</a>
+            <a href="https://creativelab-helsinki.one" class="logo font-script">CreativeLab // HEL</a>
             <ul class="nav-links">
                 <li><a href="https://creativelab-helsinki.one/#courses">Production</a></li>
                 <li><a href="https://creativelab-helsinki.one/#team">Crew</a></li>
